[tool.poetry]
authors = ["Arjun KayalMoni <arjun.umathanu@gmail.com>"]
description = "Kanban Board using FastAPI and React"
name = "kanban-backend"
version = "0.1.0"

[tool.poetry.dependencies]
PyJWT = "^2.3.0"
fastapi = "^0.70.0"
httpx = "^0.20.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
psycopg2-binary = "^2.9.1"
python = "^3.10"
python-multipart = "^0.0.5"
sqlmodel = "^0.0.4"
tortoise-orm = {extras = ["asyncpg"], version = "^0.17.8"}
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
bandit = "^1.7.0"
black = "^21.9b0"
flake8 = "^4.0.1"
isort = "^5.9.3"
mypy = "^0.910"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
requests = "^2.26.0"
safety = "^1.10.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
